# garmin2googlesheet

./: .env.example  .gitignore  .last_sync_timestamp  Makefile  README.md  pyproject.toml
.github/workflows/: garmin-sync.yml
src/: __init__.py  config.py  garmin_api.py  sync_stats.py  utils.py
