[project]
name = "garmin-sheet"
version = "0.1.0"
description = "Sync Garmin stats to Google Sheets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "garminconnect",
    "requests",
    "python-dotenv",
    "curl-cffi>=0.15.0",
    "pandas>=3.0.2",
    "gspread",
    "google-cloud-secret-manager",
]
